--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   "dependencies": {
     "@agm/core": "1.1.0",
     "@angular/animations": "9.0.5",
-    "@angular/cli": "9.0.5",
-    "@angular/compiler-cli": "9.0.5",
     "@angular/cdk": "9.1.1",
+    "@angular/cli": "9.0.5",
     "@angular/common": "9.0.5",
     "@angular/compiler": "9.0.5",
+    "@angular/compiler-cli": "9.0.5",
     "@angular/core": "9.0.5",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "9.0.5",
     "@angular/http": "7.2.16",
     "@angular/material": "9.1.1",
@@ -41,17 +42,19 @@
     "classlist.js": "1.1.20150312",
     "core-js": "3.1.3",
     "express": "^4.17.1",
+    "firebase": "^7.14.5",
     "googleapis": "40.0.0",
     "hammerjs": "2.0.8",
     "jquery": "3.4.1",
     "moment": "2.24.0",
+    "ngx-webstorage": "^5.0.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.15.0",
     "rxjs": "6.5.2",
     "rxjs-compat": "6.5.2",
+    "typescript": "3.7.5",
     "web-animations-js": "2.3.1",
-    "zone.js": "0.10.2",
-    "typescript": "3.7.5"
+    "zone.js": "0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.900.5",
